fix & complete Header #2 (overlay scrollbar, warning tippy library)

--- a/src/components/Layout/DefaultLayout/DefaultLayout.module.scss
+++ b/src/components/Layout/DefaultLayout/DefaultLayout.module.scss
@@ -7,6 +7,7 @@
 .container {
     width: var(--defaultLayout-width, 1150px);
     padding: 0 var(--defaultLayout-horizontal-spacer);
+    margin-top: var(--defaultLayout-header-height, 60px);
     display: flex;
 }
 
